fixed project align

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -45,8 +45,6 @@
 
 .projects {
   text-align: center;
-  display: grid;
-	
 }
 
 .navbar {
